# excelifyjs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.mjs  package.json  pnpm-lock.yaml
.changeset/: petite-bushes-hammer.md
.github/scripts/: extract-changelog.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.mjs
docs/: examples.md  getting-started.md  index.md  markdown-examples.md  workbook.md  worksheet.md
docs/.vitepress/: config.mts
lib/: bindings.rs  cell.rs  error.rs  lib.rs  workbook.rs  worksheet.rs  writer.rs
